# JniRegister

./: README.md
CRegister/: CMakeLists.txt  DynamicRegister.c  clz_JniTest.c  clz_JniTest.h  clz_Register.c
JavaJni/libs/: libfirstlib.dylib  libjnitestlib.dylib
JavaJni/src/: clz_Register.h
JavaJni/src/clz/: ClassMethod.java  JniTest.java  Register.java
JavaJni/src/register/: DynamicRegister.java
